force-app/main/default/objects/Partner_Integration__c/Partner_Integration__c.object-meta.xml
<CustomObject>
    <description>Lists all products,certified units,partner version and other requirements.</description>
    <label>Partner Integration</label>
    <nameField>
        <label>Partner Integration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>