force-app/main/default/objects/Partner_Integration__c/fields/Certified_Units__c.field-meta.xml
<CustomField>
    <fullName>Certified_Units__c</fullName>
    <label>Certified Units</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>