force-app/main/default/objects/Partner_Integration__c/fields/Integration_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner_Account__c</fullName>
    <description>Integration Partner Account</description>
    <label>Integration Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>This is not a Integration Partner Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Integration Partner Accounts</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Classification__c</field>
            <operation>equals</operation>
            <value>Integration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Current Integrations</relationshipLabel>
    <relationshipName>Partner_Integrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>