force-app/main/default/objects/Partner_Integration__c/fields/Other_Req__c.field-meta.xml
<CustomField>
    <fullName>Other_Req__c</fullName>
    <description>Other requirements</description>
    <label>Other Req.</label>
    <type>TextArea</type>
</CustomField>