force-app/main/default/objects/Partner_Integration__c/fields/Partner_Version_Req__c.field-meta.xml
<CustomField>
    <fullName>Partner_Version_Req__c</fullName>
    <externalId>true</externalId>
    <label>Partner Version Req.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>