force-app/main/default/objects/Partner_Integration__c/fields/Product_List__c.field-meta.xml
<CustomField>
    <fullName>Product_List__c</fullName>
    <label>Product List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>Trailer Tracks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>