force-app/main/default/objects/Partner_Integration__c/fields/Tech_Brief__c.field-meta.xml
<CustomField>
    <fullName>Tech_Brief__c</fullName>
    <description>link to technical brief</description>
    <inlineHelpText>Link to Technical Brief</inlineHelpText>
    <label>Tech Brief</label>
    <type>Url</type>
</CustomField>